cabal-version:       >=1.10

name:                adventofcode
version:             2019
synopsis:            Advent of code 2019 solutions
description:         Advent of code 2019 solutions in Haskell by Erik Hesselink
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
category:            Advent of Code
build-type:          Simple

Source-Repository head
  Type:                git
  Location:            git://github.com/hesselink/adventofcode2019.git

executable 1
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
  hs-source-dirs:      1
  default-language:    Haskell2010

executable 2
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , mtl
                     , split
  hs-source-dirs:      2
  default-language:    Haskell2010

executable 3
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , containers
                     , split
  hs-source-dirs:      3
  default-language:    Haskell2010

executable 4
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
  hs-source-dirs:      4
  default-language:    Haskell2010

executable 5
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , mtl
                     , split
  hs-source-dirs:      5
  default-language:    Haskell2010

executable 6
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , hashable
                     , fgl
  hs-source-dirs:      6
  default-language:    Haskell2010

executable 7
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , mtl
                     , split
  hs-source-dirs:      7
  default-language:    Haskell2010
